board: Return immutable lists for non-modifiable variants of methods